--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   youtube_player_flutter: ^9.1.3
   google_fonts: ^6.1.0
   remixicon: ^1.4.1
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
