--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.0
+  webview_flutter: ^4.7.0
   
   # Tambahkan ini:
   flutter_map: ^7.0.0 # Untuk merender peta OSM
   latlong2: ^0.9.1 # Untuk menangani koordinat (Latitude/Longitude)
   url_launcher: ^6.2.0
   geolocator: ^13.0.0 # Untuk akses GPS
+  geocoding: ^3.0.0  # <--- TAMBAHKAN INI
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
